Was about to change the jagged arrays to multidimensional arrays, but realized it changes the meaning of .Length calls, which are abundant. I'll look into what to do about that later.

--- a/ImageTracerNet/ImageTracerNet.csproj
+++ b/ImageTracerNet/ImageTracerNet.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\BitmapExtensions.cs" />
     <Compile Include="ImageData.cs" />
     <Compile Include="ImageTracer.cs" />
     <Compile Include="IndexedImage.cs" />
