Implemented Options classes. It still works with the current lowercase command line options.

--- a/ImageTracerNet/ImageTracerNet.csproj
+++ b/ImageTracerNet/ImageTracerNet.csproj
@@ -43,12 +43,13 @@
   <ItemGroup>
     <Compile Include="Extensions\ArrayExtensions.cs" />
     <Compile Include="Extensions\BitmapExtensions.cs" />
+    <Compile Include="Extensions\MathExtensions.cs" />
     <Compile Include="ImageData.cs" />
     <Compile Include="ImageTracer.cs" />
     <Compile Include="IndexedImage.cs" />
     <Compile Include="OptionTypes\Blur.cs" />
     <Compile Include="OptionTypes\ColorQuantization.cs" />
-    <Compile Include="OptionTypes\OptionsFile.cs" />
+    <Compile Include="Options.cs" />
     <Compile Include="OptionTypes\SvgRendering.cs" />
     <Compile Include="OptionTypes\Tracing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
