--- a/ImageTracerNet/ImageTracerNet.csproj
+++ b/ImageTracerNet/ImageTracerNet.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Options.cs" />
     <Compile Include="OptionTypes\SvgRendering.cs" />
     <Compile Include="OptionTypes\Tracing.cs" />
+    <Compile Include="PaletteAccumulator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
