--- a/ImageTracerNet/ImageTracerNet.csproj
+++ b/ImageTracerNet/ImageTracerNet.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Palettes\PaletteAccumulator.cs" />
     <Compile Include="Palettes\PaletteGenerator.cs" />
     <Compile Include="Palettes\SmartPalette.cs" />
+    <Compile Include="PixelGroup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
