Create PathPoint to make the code less retardedly confusing to read.

--- a/ImageTracerNet/ImageTracerNet.csproj
+++ b/ImageTracerNet/ImageTracerNet.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Palettes\PaletteGenerator.cs" />
     <Compile Include="Palettes\SmartPalette.cs" />
     <Compile Include="Pathing.cs" />
+    <Compile Include="PathPoint.cs" />
     <Compile Include="PixelGroup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
