Moved the sequence methods into Sequencing.cs.

--- a/ImageTracerNet/ImageTracerNet.csproj
+++ b/ImageTracerNet/ImageTracerNet.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Segmentation.cs" />
+    <Compile Include="Sequencing.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="References\ImageTracer.java" />
