Moved the classes used in the vectorization process into the Vectorization namespace.

--- a/ImageTracerNet/ImageTracerNet.csproj
+++ b/ImageTracerNet/ImageTracerNet.csproj
@@ -49,12 +49,12 @@
     <Compile Include="Extensions\CollectionExtensions.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="Extensions\MathExtensions.cs" />
-    <Compile Include="Heading.cs" />
+    <Compile Include="Vectorization\Heading.cs" />
     <Compile Include="ImageData.cs" />
     <Compile Include="ImageTracer.cs" />
     <Compile Include="IndexedImage.cs" />
-    <Compile Include="Interpolation.cs" />
-    <Compile Include="InterpolationPoint.cs" />
+    <Compile Include="Vectorization\Interpolation.cs" />
+    <Compile Include="Vectorization\Points\InterpolationPoint.cs" />
     <Compile Include="OptionTypes\Blur.cs" />
     <Compile Include="OptionTypes\ColorQuantization.cs" />
     <Compile Include="Options.cs" />
@@ -64,13 +64,13 @@
     <Compile Include="Palettes\PaletteAccumulator.cs" />
     <Compile Include="Palettes\PaletteGenerator.cs" />
     <Compile Include="Palettes\SmartPalette.cs" />
-    <Compile Include="Pathing.cs" />
-    <Compile Include="PathPoint.cs" />
+    <Compile Include="Vectorization\Pathing.cs" />
+    <Compile Include="Vectorization\Points\PathPoint.cs" />
     <Compile Include="PixelGroup.cs" />
-    <Compile Include="Point.cs" />
+    <Compile Include="Vectorization\Points\Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Segmentation.cs" />
-    <Compile Include="Sequencing.cs" />
+    <Compile Include="Vectorization\Segmentation.cs" />
+    <Compile Include="Vectorization\Sequencing.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="References\ImageTracer.java" />
