--- a/ImageTracerNet/ImageTracerNet.csproj
+++ b/ImageTracerNet/ImageTracerNet.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Vectorization\Points\Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vectorization\Segmentation.cs" />
+    <Compile Include="Vectorization\SequenceIndices.cs" />
     <Compile Include="Vectorization\Sequencing.cs" />
     <Compile Include="ZPosition.cs" />
   </ItemGroup>
