--- a/ImageTracerNet/ImageTracerNet.csproj
+++ b/ImageTracerNet/ImageTracerNet.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ColorReference.cs" />
-    <Compile Include="EdgeNode.cs" />
+    <Compile Include="Vectorization\EdgeNode.cs" />
     <Compile Include="Extensions\ArrayExtensions.cs" />
     <Compile Include="Extensions\BitmapExtensions.cs" />
     <Compile Include="Extensions\ColorExtensions.cs" />
@@ -57,6 +57,7 @@
     <Compile Include="ImageTracer.cs" />
     <Compile Include="PaddedPaletteImage.cs" />
     <Compile Include="Vectorization\Interpolation.cs" />
+    <Compile Include="Vectorization\Layering.cs" />
     <Compile Include="Vectorization\Points\InterpolationPoint.cs" />
     <Compile Include="OptionTypes\Blur.cs" />
     <Compile Include="OptionTypes\ColorQuantization.cs" />
