--- a/ImageTracerNet/ImageTracerNet.csproj
+++ b/ImageTracerNet/ImageTracerNet.csproj
@@ -72,6 +72,7 @@
     <Compile Include="ColorGroup.cs" />
     <Compile Include="Vectorization\Points\Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vectorization\DirectedEdge.cs" />
     <Compile Include="Vectorization\Segments\LineSegment.cs" />
     <Compile Include="Vectorization\Segmentation.cs" />
     <Compile Include="Vectorization\Segments\Segment.cs" />
