--- a/ImageTracerNet/ImageTracerNet.csproj
+++ b/ImageTracerNet/ImageTracerNet.csproj
@@ -80,6 +80,13 @@
     <Compile Include="Vectorization\Sequencing.cs" />
     <Compile Include="Vectorization\Segments\SplineSegment.cs" />
     <Compile Include="Svg\ZPosition.cs" />
+    <Compile Include="Vectorization\TraceTypes\InterpolationPointLayer.cs" />
+    <Compile Include="Vectorization\TraceTypes\InterpolationPointPath.cs" />
+    <Compile Include="Vectorization\TraceTypes\SegmentLayer.cs" />
+    <Compile Include="Vectorization\TraceTypes\PathPointLayer.cs" />
+    <Compile Include="Vectorization\TraceTypes\PathPointPath.cs" />
+    <Compile Include="Vectorization\TraceTypes\RawLayer.cs" />
+    <Compile Include="Vectorization\TraceTypes\SegmentPath.cs" />
     <Compile Include="Vectorization\WalkDirection.cs" />
   </ItemGroup>
   <ItemGroup>
