--- a/ImageTracerGui/ImageTracerGui.csproj
+++ b/ImageTracerGui/ImageTracerGui.csproj
@@ -60,6 +60,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ColorSelectionItem.cs" />
     <Compile Include="SvgParser.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
