Updated entire line generation strategy to use doubles since they use a double as a point position, and the grid uses it for a size. This made the lines extremely accurate now. Made the lines animated too.

--- a/ImageTracerGui/ImageTracerGui.csproj
+++ b/ImageTracerGui/ImageTracerGui.csproj
@@ -62,6 +62,7 @@
     </ApplicationDefinition>
     <Compile Include="ColorSelectionItem.cs" />
     <Compile Include="SvgParser.cs" />
+    <Compile Include="UIElementCollectionExtensions.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
