Initial cleanup post-GUI creation. Filtered the raw layers with only layers are are actually used. Separated out the sequencing and segmentation processes (this is currently slower the the old process). Separated the PaddedPaletteImage to a TracedImage, which is the output of vectorization.

--- a/ImageTracerNet/ImageTracerNet.csproj
+++ b/ImageTracerNet/ImageTracerNet.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ColorReference.cs" />
+    <Compile Include="TracedImage.cs" />
     <Compile Include="Vectorization\EdgeNode.cs" />
     <Compile Include="Extensions\ArrayExtensions.cs" />
     <Compile Include="Extensions\BitmapExtensions.cs" />
